@@ -1,6 +1,6 @@
 ### To do list: ###
 
-* rendre les icones de batterie et signal clickable pour avoir la valeur exact.
+* Nothing
 
   
 ### To fix list: ###
@@ -27,6 +27,7 @@
     * a grid has been added to all graphs.
     * a window for signal quality and battery has been added
     * a window for pressure details has been added.
+    * a window for temperature, humidity and dew point has been added.
 
 
 ### December 27 2021, Release version 0.8.2 ###
